[build-system]
requires = [
    "hatchling",
    "jupyterlab==4.*",
]
build-backend = "hatchling.build"

[project]
name = "bqscales"
description = "Grammar of Graphics in Python."
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "The BQplot Development Team" },
]
keywords = [
    "bqplot",
    "d3",
    "graphics",
    "ipython",
    "jupyter",
    "plotting",
    "widgets",
]
dependencies = [
    "ipywidgets>=8.0.1,<9",
    "numpy>=1.10.4",
    "traitlets>=4.3.0",
    "traittypes>=0.0.6",
]
version = "0.3.2"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/bqplot/bqscales"

[tool.hatch.build]
artifacts = [
    "bqscales/nbextension/static/index.*",
    "bqscales/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"bqscales/nbextension/static" = "share/jupyter/nbextensions/bqscales"
"bqscales/labextension" = "share/jupyter/labextensions/bqscales"
"bqscales.json" = "etc/jupyter/nbconfig/notebook.d/bqscales.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "bqscales/nbextension/static/index.js",
    "bqscales/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]

[tool.tbump.version]
current = "0.3.2"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""

[[tool.tbump.file]]
src = "bqscales/_version.py"

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""
